# kostrov-parser

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
kostrov_parser/: app.py  config.py  database.py  messages.py  parse.py  schemas.py  utils.py
tests/: test_kostrov_parser.py
