[tool.poetry]
name = "kostrov-parser"
version = "0.1.0"
description = ""
authors = ["Maxim Vasilev <Maxim.Vasilev@jetbrains.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.7"
requests = "^2.26.0"
tenacity = "^8.0.1"
python-dotenv = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
